--- a/css/normalize.css
+++ b/css/normalize.css
@@ -1,5 +1,11 @@
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
 /* Document
    ========================================================================== */
 
